fixing reload issue, cut off font

--- a/src/components/MintHome.css
+++ b/src/components/MintHome.css
@@ -220,9 +220,9 @@
 
     .minthome__container {
         right: 5vw;
-        top: 14vh;
+        top: 0;
         width: 90vw;
-        height: 75vh;
+        height: 100%;
         overflow: visible;
     }
     
